# job-engine-automation

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ERRORS.md  LICENSE  Makefile  NOTES-CV.md  QUICK-START-ENHANCED.md  QUICK_MINIMAL_START.md  README.md  SECURITY.md  auto_skip_failing_tests.py  f821-errors.txt  generate_correct_tests.sh  pyTest.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  ss  structure.md
.gihtub/workflows/: ultime-job-engine.yml~
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  skill_request.md
.github/scripts/: analyze_campaign_logs.py  display_config_summary.py  run_analysis.py  update_config_contacts.yml  validate_campaign.py
.github/workflows/: #unified-reverse-job-engine.yml#  auto-job-analysis.yml  auto-job-analysis.yml~  autojob-analysis.yml  batch-analysis.yml  ci-tests.yml  cleanup-actions.yml  cleanup-old-workflows.yml  cleanup-workflows-aggressively.yml  deploy-docs.yml  job-engine-manager.yml  lint-and-format.yml  release.yml  scheduled-analysis.yml  ss.yml  ultime-job-engine.yml  unified-job-search-engine.yml  unified-job-search-engine.yml~  unified-reverse-job-engine.yml
PYSETUP/: .flake8  Makefile  QUICK-START.md  Usage.md  implementation-setup.md  org.md  org.yml  org2.md  pyproject.toml  pytest-o.md  pytest.ini  test_cv_parser.py  test_job_parser.py  test_org_guide.md
benchmarks/: .gitkeep  PERORMANCE_GUIDE.md  README.md  __init__.py  analyze_benchmark.py  benchmark_matching.py  benchmark_parsing.py  run_all_benchmarks.sh
docs/: README-WORKFLOWS.md  README.md  algorithms.md  api-reference.md  architecture.md  automation-guide.md  faq.md  getting-started.md  getting-started2.md  index.md  quick-easiest-start.md  quick-start.md  setup_last.md  troubleshooting.md  user-guide.md  workflow-guide.md
docs/examples/: sample_analysis.json  sample_cv.txt  sample_job.txt  sample_report.md
examples/: __init__.py  automation_example.py  batch_analysis.py  custom_resources.py  full_roadmap.py  full_workflow.py  learning_plan_demo.py  quick_start.py  report_generation_demo.py  reverse_workflow.py  reverse_workflow_demo.py  skill_gap_demo.py  tracking_demo.py
job_search_data/: README.md  analyzed_jobs.json  example_data_analyzed_jobs.json  example_data_learning_progress.json  example_data_master_skillset.json  example_data_skill_tests.json  example_data_sprint_history.json  example_data_workflow_state.json  learning_progress.json  master_skillset.json  master_skillset.json.backup  recruiter_letters_9500783f9a67.json  skill_tests.json  sprint_history.json  workflow_state.json
job_search_data/export_packages/: complete_report.txt  cover_letter.txt  follow_email.txt  improvement_strategy.json  learning_plan.json  linkedin_message.txt  networking_email.txt  skill_tests.json
job_search_data/templates/: README.md  cold_application_template.txt  cover_letter_template.txt  followup_email_template.txt  interview_prep_template.txt  learning_plan_template.txt  linkedin_message_template.txt  networking_email_template.txt  project_showcase_template.txt  rejection_response_template.txt  skill_test_template.txt  sprint_plan_template.txt
scripts/: .#Real_fixes.md  README.md  Real_fixes.md  clean_data.sh  cleanup.sh  compatibility.md  debug_analysis.py  export_results.sh  f821_fixer.py  fix_analyzed_jobs.py  fix_bugs.py  fix_f821.py  fix_linting_issues.py  fix_skillset.py  install_dependencies.sh  parse_f821.py  run_analysis.sh  run_tests.sh  samples-generator.py  setup-workflows.sh  setup.sh  setup_minimal.sh  setup_repo.sh  setup_script.sh  smart_f821_autohealer.py  smart_f821_fixer.py  templates_generator.py  test_file_analysis.py  test_file_analysis.py~  test_files.py  usage.sh  verify_imports.py
src/: __init__.py  python_advanced_job_engine.py  python_advanced_job_engine.py.backup  python_advanced_job_engine.py.w
src/analyzers/: __init__.py  cv_parser.py  gap_analyzer.py  job_parser.py  matcher.py
src/generators/: __init__.py  letter_generator.py  report_generator.py  template_engine.py
src/learning/: __init__.py  plan_generator.py  resource_db.py  strategy_builder.py  test_generator.py
src/tracking/: __init__.py  progress_tracker.py  quality_gates.py  sprint_manager.py  state_manager.py
src/utils/: #pp#  Fixes.py  README.md  __init__.py  data_loader.py  file_readers.py  fix_indentation.py  formatters.py  helpers.py  validators.py
templates/: config_template.json  cv_template.txt  job_template.txt
templates/letter_templates/: cover_letter_future.txt  cover_letter_growth.txt  cover_letter_strong.txt
test_data/: sample_cv.txt  sample_job.txt
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  real_data.json  real_job.txt  sample_cv.txt
tests/integration/: README.md  test_data_persistense.py  test_full_workflow.py  test_gap_analyzer_integration.py  test_reverse_workflow.py
tests/mocks/: README.md  __init__.py  mock_data.py
tests/unit/: README.md  __init__.py  test_cv_parser.py  test_file_readers.py  test_gap_analyzer_mock.py  test_gap_analyzer_real.py  test_job_parser.py  test_learning_plan.py  test_matcher.py  test_sprint_manager.py
tools/: README.md  generate_docs.py  update_resources.py  validate_data.py
